--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "third_party/VST3_SDK"]
 	path = third_party/VST3_SDK
 	url = https://github.com/steinbergmedia/vst3sdk.git
+[submodule "third_party/libpd"]
+  path = third_party/libpd
+  url = https://github.com/libpd/libpd.git
